# deep-learning-ass-2

./: main.py  pyproject.toml
src/: dataset.py  model.py  train.py
src/utils/: config.py
